After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 731107 - glimagesink: Failed to create window surface: EGL_BAD_ALLOC
glimagesink: Failed to create window surface: EGL_BAD_ALLOC
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Mac OS
: Normal blocker
: 1.3.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-06-02 13:28 UTC by Matthieu Bouron
Modified: 2014-06-03 09:32 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
logcat.txt (71.08 KB, text/plain)
2014-06-02 13:28 UTC, Matthieu Bouron
  Details
glimagesink: improve state change debug message (954 bytes, patch)
2014-06-02 13:29 UTC, Matthieu Bouron
committed Details | Review

Description Matthieu Bouron 2014-06-02 13:28:15 UTC
Android tutorial 4-5 fails on android with the following error: Failed to create window surface: EGL_BAD_ALLOC.
Comment 1 Matthieu Bouron 2014-06-02 13:28:43 UTC
Created attachment 277720 [details]
logcat.txt
Comment 2 Matthieu Bouron 2014-06-02 13:29:24 UTC
Created attachment 277721 [details] [review]
glimagesink: improve state change debug message
Comment 3 Matthieu Bouron 2014-06-02 13:32:55 UTC
The device is a nexus 4 running Android 4.4.2.
gst-plugins-bad revision is b44724f6624bda8452471b36cb52af8e9900bf4a.
Comment 4 Matthieu Bouron 2014-06-02 15:05:09 UTC
The regression seems to have been introduced by f7f92e6d7a25a57907833bd66915f49fdc871fef
Comment 5 Matthew Waters (ystreet00) 2014-06-03 04:10:07 UTC
commit 59088f5a90960cde183a72bde2754be749750aa6
Author: Matthew Waters <ystreet00@gmail.com>
Date:   Tue Jun 3 13:59:51 2014 +1000

    glupload: always release the previous buffer
    
    Fixes the case where _perform_with_buffer() is called without
    intervening calls to _release_buffer() as is the case on start up
    with glimagesink.
    
    Also release the buffer when reseting the upload.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=731107
Comment 6 Matthieu Bouron 2014-06-03 09:32:25 UTC
Thanks :)